// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent"
          >
            1
          </span>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders checkmarked 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <div
            class="PicassoContainer-rightxsmallMargin PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
          >
            <svg
              class="PicassoSvgCheckMinor16-root"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <path
                d="M6.5 9.793l4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2z"
              />
            </svg>
          </div>
          <span
            class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentSemibold"
          >
            1
          </span>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders in title case with global prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuItem-stringContent"
            >
              Arrow
            </span>
          </div>
        </div>
      </li>
    </div>
  </div>
</div>
`;

exports[`MenuItem renders in title case with local prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent"
          >
            Arrow
          </span>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders with a sub menu arrow 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent"
          >
            1
          </span>
          <div
            class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
          >
            <svg
              class="PicassoSvgChevronMinor16-root"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
              />
            </svg>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders with description 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
      >
        <div
          class="PicassoContainer-centerAlignItems PicassoContainer-flex"
        >
          <span
            class="PicassoMenuItem-stringContent"
          >
            1
          </span>
        </div>
        <div
          class=""
          style="margin-top: 0.25rem;"
        >
          <p
            class="MuiTypography-root PicassoTypography-bodyXsmall MuiTypography-body1"
          >
            details
          </p>
        </div>
      </div>
    </li>
  </div>
</div>
`;
